tests/bug_detector_tests/primitiveToObject3.test
################################################################################
#    Copyright (c) 2013, KAIST.
#    All rights reserved.
#
#    Use is subject to license terms.
#
#    This distribution may include materials developed by third parties.
################################################################################
tests=primitiveToObject3
BUGDETECTOR_TESTS_DIR=${JS_HOME}/tests/bug_detector_tests
bug-detector
bug-detector_out_WCIequals=\
 \n\
* Bug Detector * \n\
primitiveToObject3.js:13:1~13:2: [Warning] Trying to convert primitive value(boolean) to object. \n\
primitiveToObject3.js:13:1~13:4: [Warning] Property 'p' is never used. \n\
 \n\
============== Total Count ============== \n\
|  ReferenceErrors   :      0 (  0.00%) | \n\
|  TypeErrors        :      0 (  0.00%) | \n\
|  Warnings          :      2 (100.00%) | \n\
========================================= \n\
============ Statistics ============= \n\
|  AbsentRead              :      0 | \n\
|  BinaryOperator          :      0 | \n\
|  BuiltinArgSize          :      0 | \n\
|  BuiltinWrongType        :      0 | \n\
|  CallConstFunc           :      0 | \n\
|  CallNonConstructor      :      0 | \n\
|  CallNonFunction         :      0 | \n\
|  ConditionalBranch       :      0 | \n\
|  ConvertToNumber         :      0 | \n\
|  DefaultValueTypeError   :      0 | \n\
|  GlobalThis              :      0 | \n\
|  ImplicitTypeConversion  :      0 | \n\
|  AccessingNullOrUndef    :      0 | \n\
|  PrimitiveToObject       :      1 | \n\
|  Shadowing               :      0 | \n\
|  UnreachableCode         :      0 | \n\
|  Unused                  :      1 | \n\
|  VaryingTypeArguments    :      0 | \n\
|  WrongThisType           :      0 | \n\
===================================== \n\
\n
bug-detector_err_equals=
