tests/bug_detector_tests/primitiveToObject3.js
/*******************************************************************************
    Copyright (c) 2013, S-Core.
    All rights reserved.

    Use is subject to license terms.

    This distribution may include materials developed by third parties.
 ***************************************************************************** */

var x = false;
var y = "1234";

x.p = 1;
y.length;
